Fixed CSS issue, product variants toggle was not visible

--- a/system/modules/isotope/html/backend.css
+++ b/system/modules/isotope/html/backend.css
@@ -28,7 +28,7 @@
 .tl_productdata .tl_file .tl_right,.product_tree .tl_file .tl_right{height:auto;text-align:right}
 .tl_productdata label,.tl_productdata .tl_folder .tl_left{line-height:18px}
 .iso_product{margin-top:2px;margin-bottom:2px;width:500px;text-indent:0}
-.iso_product .thumbnail{padding-right:5px;float:left;width:34px;height:34px;margin-left:-20px}
+.iso_product .thumbnail{padding-right:5px;float:left;width:34px;height:34px}
 .iso_product ul{margin-left:34px}
 .iso_product p{font-weight:700;margin:0 0 5px;padding:0}
 .iso_product p span{font-weight:400}
