--- a/system/modules/isotope/html/backend_src.css
+++ b/system/modules/isotope/html/backend_src.css
@@ -229,7 +229,6 @@
 	float: left;
 	width: 34px;
 	height: 34px;
-	margin-left: -20px;
 }
 
 .iso_product ul
